# nn-laser-stabilizer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: _train_async.yaml  _train_sync.yaml  _train_sync_async.yaml  agent.yaml  connection_test.yaml  csv_to_buffer.yaml  data.yaml  default_config.yaml  env.yaml  hydra.yaml  inference.yaml  inference_async_test.yaml  kp_scan.yaml  neural_controller.yaml  neural_controller_inference.yaml  neural_pid.yaml  pendulum.yaml  pendulum_no_vel.yaml  pid_delta_tuning-inference.yaml  pid_delta_tuning-recurrent.yaml  pid_delta_tuning.yaml  pid_process.yaml  pid_run.yaml  pid_scan.yaml  root.yaml  setpoint_determination.yaml  train.yaml  train_async.yaml  train_async_simulation.yaml  train_async_test.yaml  train_base.yaml  train_from_buffer.yaml  train_from_csv.yaml  train_real.yaml  train_real_test.yaml  train_simulation.yaml  train_simulation_recurrent.yaml  train_sync.yaml
docs/: experiments_index.md
notebooks/: 01_experiment-analysis.ipynb  02_experiment-analysis.ipynb  03_experiment-analysis.ipynb  04_experiment-analysis.ipynb  05_experiment-analysis.ipynb  06_experiment-analysis.ipynb  07_experiment-analysis-extended.ipynb  07_experiment-analysis.ipynb  08_experiment-analysis.ipynb  09_coefficient_scan_analysis.ipynb  10_kp_tuning_analysis.ipynb  11_kp_ki_tuning_analysis.ipynb  12_kp_ki_kd_tuning_analysis.ipynb  13_kp_ki_tuning_analysis.v2.ipynb  14_kp_ki_tuning_analysis.v3.ipynb  15_kp_ki_tuning_inference_analysis.v1.ipynb  16_kp_ki_tuning_analysis.v4.ipynb  kp_ki_kd_tuning_analysis.ipynb  (+50 more)
(+387 files in other folders)
